<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="vertical">

        <TextView
            android:id="@+id/solution_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25"
        android:orientation="vertical">


        <TextView
            android:id="@+id/result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="textEnd"
            android:textSize="64sp"
            android:textColor="@color/black"
            android:layout_margin="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="60"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/open_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/open"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/close_bracket"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/close"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/divide"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="25"
                android:backgroundTint="#FC6736"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seven"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="25"
                android:backgroundTint="#FC6736"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtract"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="25"
                android:backgroundTint="#FC6736"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="25"
                android:backgroundTint="#FC6736"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="20"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="25"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="25"
                android:backgroundTint="#FC6736"
                android:text="@string/equal"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>